[package]
name = "asm-cli-rust"
version = "0.1.0"
authors = ["Xargin <cao1988228@163.com>"]
edition = "2018"

[dependencies]
capstone = "^0.9.0"
keystone = {git = "https://github.com/keystone-engine/keystone/"}
unicorn-engine = {git = "https://github.com/unicorn-engine/unicorn/", branch = "dev"}
hex = "0.3.2"
rustyline = "9.1.0"
ansi_term = "0.11.0"
maplit = "1"
